syntax = "proto3";
package sonrio.sonr.registry;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "registry/params.proto";
import "registry/who_is.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/sonr-io/sonr/x/registry/types";

option java_package = "io.sonr.types.registry";
option java_multiple_files = true;

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/sonr-io/sonr/registry/params";
  }
  // Queries a WhoIs by id.
	rpc WhoIs(QueryWhoIsRequest) returns (QueryWhoIsResponse) {
		option (google.api.http).get = "/sonr-io/sonr/registry/who_is/{did}";
	}

	// Queries a list of WhoIs items.
	rpc WhoIsAll(QueryAllWhoIsRequest) returns (QueryAllWhoIsResponse) {
		option (google.api.http).get = "/sonr-io/sonr/registry/who_is";
	}

// Queries a list of WhoIsAlias items.
	rpc WhoIsAlias(QueryWhoIsAliasRequest) returns (QueryWhoIsAliasResponse) {
		option (google.api.http).get = "/sonr-io/sonr/registry/who_is_alias/{alias}";
	}

// Queries a list of WhoIsController items.
	rpc WhoIsController(QueryWhoIsControllerRequest) returns (QueryWhoIsControllerResponse) {
		option (google.api.http).get = "/sonr-io/sonr/registry/who_is_controller/{controller}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryWhoIsRequest {
	string did = 1;
}

message QueryWhoIsResponse {
	WhoIs WhoIs = 1 [(gogoproto.nullable) = true];
}

message QueryAllWhoIsRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllWhoIsResponse {
	repeated WhoIs WhoIs = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryWhoIsAliasRequest {
	// Alias of a WhoIs.
  	string alias = 1;
}

message QueryWhoIsAliasResponse {
	WhoIs WhoIs = 1 [(gogoproto.nullable) = true];
}

message QueryWhoIsControllerRequest {
	// Controller did string
  	string controller = 1;
}

message QueryWhoIsControllerResponse {
	WhoIs WhoIs = 1 [(gogoproto.nullable) = true];
}

// this line is used by starport scaffolding # 3
